[metadata]
name = SEOBird657
version = 0.6.0a0
description = A small Wagtail app.
long_description = file: README.md
url = https://github.com/oscfr657/SEOBird657
author = Oscar F
license = Hippocratic License Version Number: 2.1 with Commons Clause License Condition v1.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Wagtail
    Framework :: Wagtail :: 6
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 5.0
    wagtail >= 6.1.1
    wagtailmedia>=0.15.1
